// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SnapshotInteractiveMode skip 1 test, then quit 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then quit 2`] = `
"<clearTerminal>

Interactive Snapshot Result
 › 1 snapshot reviewed, 1 snapshot skipped

Watch Usage
 › Press r to restart Interactive Snapshot Mode.
 › Press q to quit Interactive Snapshot Mode.
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 2`] = `
"<clearTerminal>

Interactive Snapshot Result
 › 1 snapshot reviewed, 1 snapshot skipped

Watch Usage
 › Press r to restart Interactive Snapshot Mode.
 › Press q to quit Interactive Snapshot Mode.
"
`;

exports[`SnapshotInteractiveMode skip 1 test, then restart 3`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 2 snapshots remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 2`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining, 1 snapshot skipped

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 3`] = `
"<clearTerminal>

Interactive Snapshot Result
 › 2 snapshots reviewed, 1 snapshot updated, 1 snapshot skipped

Watch Usage
 › Press r to restart Interactive Snapshot Mode.
 › Press q to quit Interactive Snapshot Mode.
"
`;

exports[`SnapshotInteractiveMode skip 1 test, update 1 test, then finish and restart 4`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 2 snapshots remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 2`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining, 1 snapshot skipped

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 3`] = `
"<clearTerminal>

Interactive Snapshot Result
 › 2 snapshots reviewed, 2 snapshots skipped

Watch Usage
 › Press r to restart Interactive Snapshot Mode.
 › Press q to quit Interactive Snapshot Mode.
"
`;

exports[`SnapshotInteractiveMode skip 2 tests, then finish and restart 4`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 2 snapshots remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 2 snapshots remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 2`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining, 1 snapshot updated

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 3`] = `
"<clearTerminal>

Interactive Snapshot Result
 › 2 snapshots reviewed, 1 snapshot updated, 1 snapshot skipped

Watch Usage
 › Press r to restart Interactive Snapshot Mode.
 › Press q to quit Interactive Snapshot Mode.
"
`;

exports[`SnapshotInteractiveMode update 1 test, skip 1 test, then finish and restart 4`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode update 1 test, then finish and return 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode update 1 test, then finish and return 2`] = `
"<clearTerminal>

Interactive Snapshot Result
 › 1 snapshot reviewed, 1 snapshot updated

Watch Usage
 › Press Enter to return to watch mode.
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 1`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 2 snapshots remaining

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 2`] = `
"<moveCursorUpBy6Rows>
<eraseScreenDown>

Interactive Snapshot Progress
 › 1 snapshot remaining, 1 snapshot updated

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test.
 › Press q to quit Interactive Snapshot Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode update 2 tests, then finish and return 3`] = `
"<clearTerminal>

Interactive Snapshot Result
 › 2 snapshots reviewed, 2 snapshots updated

Watch Usage
 › Press Enter to return to watch mode.
"
`;
